recyclerView사용, 가게 리스트 보여주기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".JoinActivity"></activity>
-        <activity android:name=".TogetherActivity"></activity>
-        <activity android:name=".AloneActivity"></activity>
-        <activity android:name=".AloneListActivity"></activity>
+        <activity android:name=".StoreListActivity"></activity>
+        <activity android:name=".MenuListActivity"></activity>
     </application>
 
 </manifest>
