--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.togetherdelivery">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -34,6 +36,7 @@
         <activity android:name=".TogetherPurchaseOrderActivity"></activity>
         <activity android:name=".TogetherOrderCompleActivity"></activity>
         <activity android:name=".ChatMessageActivity"></activity>
+        <activity android:name=".LocationActivity"></activity>
 
     </application>
 
